examples/invalid/05_multiple_expression_statements.lane
// invalid: a block has local items followed by exactly one final expression
fn bad(x : Int) -> Int {
  x + 1
  x + 2
}

